 - "My Files" opens the user's favorite Android File Explorer
 - Fixes issues where finished downloads would get re-inserted into the MediaStore
   giving users the impression the file had been downloaded multiple times
 - Major code cleanup after removal of "My Files" fragments and activities
 - com.android.tools.build:gradle:7.2.0
 - com.google.android.material:material:1.6.1

FrostWire 2.4.8 build 691 - APR/20/2022
 - TorLock search fixed
 - Removed torrent-paradise.ml, moved to IPFS, no longer works with JSON api
 - com.android.billingclient:billing:4.1.0
 - Expose settings_pack.validate_https_trackers with SettingsPack::validateHttpsTrackers methods
 - Privacy improvement: App no longer requires asking user for location
 - lt:upgrade to boost 1.79
 - lt:openssl 1.1.1n upgrade
 - lt:fix bdecode support for large strings (>= 100 MB)
 - lt:send User-Agent field in anonymous mode
 - lt:fix python binding for settings_pack conversion
 - lt:fix DHT announce timer issue
 - lt:use DSCP_TRAFFIC_TYPE socket option on windows
 - lt:update default ToS setting according to RFC 8622
 - lt:keep trying to announce to trackers even when all fail
 - lt:don't disable announcing from local endpoints because of temporary failures
 - lt:fix issue in parsing UPnP XML response with multiple forwarding services

FrostWire 2.4.7 build 690 - FEB/18/2022
 - fixes a crash on audio player screen when rotating to landscape
 - libtorrent: turn off tracker certificate validation on jlibtorrent to increase
   data availability on network until issues in libtorrent finding correct
   location of root certs is solved
 - removed mopub third party library
 - AppLovin Max 11.1.2 integration
 - androidx.media2:media2-*:1.2.1

FrostWire 2.4.6 build 689 - FEB/02/2022
 - Fixes issue with duplicate file entries in My Files
 - jlibtorrent 1.2.15.2
 - compileSdkVersion 31
 - com.google.android.material:material:1.5.0
 - androidx.browser:browser:1.4.0